<resources>
    <string name="app_name">Flux</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_study">Study</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>

    <!-- fragment_tasks -->
    <string name="str_add_new_task">Add new task</string>

    <!-- fragment_add_edit_task -->
    <string-array name="arr_fragment_add_edit_task_category_holder">
        <item>Select a category…</item>
        <item>Add New…</item>
    </string-array>
    <string name="str_add_new_reminder">Reminder</string>
    <string name="str_set_due">Set due date</string>

    <!-- fragment_reminder_detail -->
    <string name="str_fragment_reminder_detail_title">Reminder Frequency</string>

    <string name="str_fragment_title_add_edit_task_task_name">Name</string>
    <string name="str_fragment_title_add_edit_task_task_description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save_all">Save</string>

    <!-- SettingsFragment -->
    <string name="str_canvas_token">Input your Canvas token</string>
    <string name="str_dark_mode">Toggle dark mode</string>
    <string name="str_canvas_import_frequency">Select below how often you would like to automatically
        sync your courses from Canvas</string>
    <string name="str_daily">Daily</string>
    <string name="str_weekly">Weekly</string>
    <string name="str_never">Never</string>
    <string name="stops_timer" />
    <string name="starts_pauses_timer" />
    <string name="rest" />
    <string name="countdown_viewer" />
    <string name="rest1">rest</string>

</resources>