<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.pinkmoon.flux.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popExitAnim="@anim/slide_out_bottom" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.pinkmoon.flux.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks">
        <action
            android:id="@+id/action_navigation_tasks_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popExitAnim="@anim/slide_out_bottom"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.pinkmoon.flux.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.pinkmoon.flux.ui.tasks.AddEditTaskFragment"
        android:label="@string/str_add_new_task"
        tools:layout="@layout/fragment_add_edit_task" >
        <action
            android:id="@+id/action_addEditTaskFragment_to_reminderDetailFragment"
            app:destination="@id/reminderDetailFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_addEditTaskFragment_to_navigation_tasks"
            app:destination="@id/navigation_tasks"
            app:enterAnim="@anim/slide_out_bottom"
            app:exitAnim="@anim/slide_out_bottom" />
        <action
            android:id="@+id/action_addEditTaskFragment_to_addEditCategoryFragment"
            app:destination="@id/addEditCategoryFragment" />
        <argument
            android:name="newCategoryName"
            app:argType="string"
            android:defaultValue=" " />
    </fragment>
    <fragment
        android:id="@+id/reminderDetailFragment"
        android:name="com.pinkmoon.flux.ui.reminders.ReminderDetailFragment"
        android:label="@string/str_fragment_reminder_detail_title"
        tools:layout="@layout/fragment_reminder_detail" >
        <action
            android:id="@+id/action_reminderDetailFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/slide_in_right" />
    </fragment>
    <dialog
        android:id="@+id/addEditCategoryFragment"
        android:name="com.pinkmoon.flux.ui.categories.AddEditCategoryFragment"
        android:label="fragment_add_edit_category"
        tools:layout="@layout/fragment_add_edit_category" >
        <action
            android:id="@+id/action_addEditCategoryFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <argument
            android:name="editCategoryName"
            app:argType="string"
            android:defaultValue=" " />
    </dialog>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.pinkmoon.flux.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/studyFragment"
        android:name="com.pinkmoon.flux.ui.study.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />
</navigation>