<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.study.StudyFragment"
    tools:layout_editor_absoluteY="89dp">

    <ImageButton
        android:id="@+id/stop_button"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/stops_timer"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/stop_button"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/play_pause_button"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/starts_pauses_timer"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/play_button"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <ProgressBar
        android:id="@+id/clock_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="368dp"
        android:layout_height="332dp"
        android:fadeScrollbars="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/ic_circular"
        android:progressTint="@android:color/holo_green_dark"
        android:rotation="270"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/timer_numbers"
        android:layout_width="194dp"
        android:layout_height="100dp"
        android:text="@string/countdown_viewer"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/switch1"
        android:layout_width="294dp"
        android:layout_height="74dp"
        android:text="@string/rest1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />


</androidx.constraintlayout.widget.ConstraintLayout>